--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.0.1",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/socket.io": "^2.1.13",
     "@types/uuid": "^8.3.0",
     "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.6",
